--- a/songbird/src/index.css
+++ b/songbird/src/index.css
@@ -11,11 +11,26 @@ header {
 }
 
 .navbar {
-  border-radius: 10px;
+  border-radius: 0.25rem;
+  padding: 0 40px;
+}
+
+@font-face {
+  font-family: "Pinyon Script";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("Pinyon Script"), local("PinyonScript"),
+    url(https://fonts.gstatic.com/s/pinyonscript/v10/6xKpdSJbL9-e9LuoeQiDRQR8WOXaOg.woff2)
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 .navbar-brand {
-  font-family: "Leckerli One", cursive;
+  font-family: "Pinyon Script", cursive;
+  font-size: 60px;
 }
 
 .navbar-brand span {
@@ -30,7 +45,7 @@ header {
   background-color: #087257;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  border-radius: 5px;
+  border-radius: 0.25rem;
 }
 
 .page-item {
@@ -38,13 +53,14 @@ header {
   text-align: center;
 }
 
- .active-level {
-  background-color:  #00bc8c;
+.active-level {
+  background-color: #00bc8c;
   box-sizing: border-box;
-} 
+}
 
-.page-item:not(:last-child) {
-  border-right: 1px solid rgb(242, 250, 242);
+.page-item:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .page-item {
@@ -52,140 +68,106 @@ header {
 }
 
 .question-block {
-  display: flex;
+  padding: 1rem;
   background-color: #303030;
-  height: 220px;
   margin: 25px 0;
-  border-radius: 10px;
+  border-radius: 0.25rem;
 }
-.question-img {
-  width: 200px;
-  margin: 10px 20px;
+
+.player-block {
+  padding: 0 40px;
 }
-.question-img img {
-  width: inherit;
-  border-radius: 20px;
-}
+
 .bird-name {
   margin-top: 1rem;
   font-size: 24px;
 }
+
 hr.solid {
-  border-top: 2px solid #bbb;
-}
-.audio.green-audio-player {
-  width: 400px;
-  min-width: 300px;
-  height: 56px;
-  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.07);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 24px;
-  padding-right: 24px;
-  border-radius: 4px;
-  user-select: none;
-  border-radius: 30px;
-  background-color: #fff;
-}
-.audio.green-audio-player .play-pause-btn {
-  cursor: pointer;
-  width: 50px;
-  border-radius: 50%;
-  height: 50px;
-  background-color: #00bc8c;
-  padding: 12px 19px;
+  border-top: 1px solid #bbb;
 }
 
-.audio.green-audio-player .spinner {
-  width: 18px;
-  height: 18px;
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/355309/loading.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  animation: spin 0.4s linear infinite;
+.react-audio-player {
+  width: 100%;
+  border: none;
+  border-color: #303030;
 }
-.audio.green-audio-player .slider {
-  flex-grow: 1;
-  background-color: #d8d8d8;
-  cursor: pointer;
-  position: relative;
+
+.player-block .rhap_container {
+  background-color: #303030;
+  box-shadow: none;
+  padding: 0px;
 }
-.audio.green-audio-player .slider .progress {
+
+.bird-text .rhap_container {
+  background-color: #303030;
+  box-shadow: none;
+  padding: 0px;
+}
+
+.rhap_main .rhap_progress-section .rhap_time {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  font-size: 14px;
+}
+
+.rhap_progress-bar .rhap_download-progress {
+  background-color: #888;
+}
+
+.rhap_controls-section .rhap_volume-controls {
+  justify-content: flex-start;
+}
+.rhap_main .rhap_controls-section {
+  flex: none;
+}
+
+.rhap_play-pause-button img {
+  vertical-align: top;
+}
+
+.rhap_progress-bar .rhap_progress-filled {
   background-color: #44bfa3;
-  border-radius: inherit;
-  position: absolute;
-  pointer-events: none;
-}
-.audio.green-audio-player .slider .progress .pin {
-  height: 16px;
-  width: 16px;
-  border-radius: 8px;
-  background-color: #44bfa3;
-  position: absolute;
-  pointer-events: all;
-  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.32);
-}
-.audio.green-audio-player .controls {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 18px;
-  color: #55606e;
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 24px;
-  margin-right: 24px;
-}
-.audio.green-audio-player .controls .slider {
-  margin-left: 16px;
-  margin-right: 16px;
-  border-radius: 2px;
-  height: 4px;
-}
-.audio.green-audio-player .controls .slider .progress {
-  width: 0;
-  height: 100%;
-}
-.audio.green-audio-player .controls .slider .progress .pin {
-  right: -8px;
-  top: -6px;
-}
-.audio.green-audio-player .controls span {
-  cursor: default;
 }
 
-svg,
-img {
-  display: block;
+.rhap_controls-section .rhap_additional-controls {
+  flex: none;
 }
 
-@keyframes spin {
-  from {
-    transform: rotateZ(0);
-  }
-  to {
-    transform: rotateZ(1turn);
-  }
+.bird-description {
+  margin-top: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.answer-block {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .bird-img {
-  max-width: 200px;
+  width: 200px;
+  height: 155px;
+  margin-top: 1rem;
+  padding: 0;
+  text-align: center;
+  border-radius: 0.25rem;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
+
 .bird-img img {
   width: inherit;
+  height: inherit;
+  object-fit: cover;
+  border-radius: 0.25rem;
 }
 
 .bird-info {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 2 1 50%;
   background-color: #303030;
-  border-radius: 10px;
-  border:1px solid #555;
+  border-radius: 0.25rem;
+  border: 1px solid #555;
 }
 
 .indicator {
@@ -194,6 +176,19 @@ code {
   border-radius: 50%;
   background-color: #55606e;
   margin-right: 20px;
+}
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: #00bc8c;
+}
+
+.list-group {
+  padding-right: 40px;
+  flex: 1 2 50%;
 }
 
 .list-group .list-group-item.active {
@@ -206,8 +201,125 @@ code {
 
 .list-group-item.active:hover {
   background-color: #444;
+  cursor: pointer;
 }
 
 .bird-text .audio.green-audio-player {
   width: 100%;
+}
+
+.btn-secondary {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.btn-secondary:not(:disabled) {
+  background-color: #00bc8c;
+}
+
+.final-window {
+  flex-direction: column;
+  align-items: center;
+}
+
+.final-img {
+  border-radius: 50%;
+  margin-top: 20px;
+  max-width: 500px;
+}
+
+.final-caption {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  font-size: 6rem;
+  font-weight: 400;
+}
+
+.btn-success {
+  width: 100%;
+  margin-top: 10rem;
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 100%;
+  }
+  .page-item:not(:last-child) {
+    border-right: none;
+  }
+  .question-img {
+    padding: 10px 20px;
+  }
+  .btn-secondary {
+    max-width: 80%;
+    margin: 20px auto;
+  }
+  .btn-success {
+    max-width: 80%;
+  }
+}
+@media (max-width: 768px) {
+  .bird-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .bird-img,
+  .bird-text {
+    max-width: 100%;
+  }
+}
+@media (max-width: 670px) {
+  .pagination {
+    flex-direction: column;
+  }
+  .page-item:first-child {
+    border-top-right-radius: 5px;
+  }
+
+  .final-window {
+    padding: 20px;
+  }
+  .final-caption {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .question-block .bird-img {
+    width: inherit;
+  }
+  .player-block {
+    padding: 0px;
+  }
+  .player-block .rhap_horizontal-reverse {
+    flex-direction: column;
+  }
+  .rhap_main .rhap_controls-section {
+    margin-right: 0px;
+    margin: 0 auto;
+  }
+  .list-group {
+    max-width: 90%;
+    padding-right: 0px;
+    margin-bottom: 20px;
+  }
+  .answer-block {
+    align-items: center;
+    flex-direction: column;
+  }
+  .bird-text {
+    max-width: 100%;
+  }
+  .bird-info {
+    align-items: center;
+    max-width: 90%;
+    padding: 0px;
+  }
+  .final-caption {
+    font-size: 2rem;
+  }
+
+  .btn-success {
+    margin-top: 4rem;
+  }
 }
